#11096 [신청서 문서 양식] 상태에 따라 처리할 문서 '편집가능' , '숨김' , '읽기전용' 처리 : MR 후 수정 사항 반영

--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -2243,6 +2243,9 @@ select {
 .z-checkbox:active input[type=checkbox]:not(.readonly) + span:after {
   border-color: #1959AC;
 }
+.z-checkbox.readonly, .z-checkbox.disabled {
+  pointer-events: none;
+}
 
 .z-radio {
   position: relative;
@@ -2345,6 +2348,9 @@ select {
   -o-transform: translate(4px, 9px) scale(1);
   -ms-transform: translate(4px, 9px) scale(1);
   transform: translate(4px, 9px) scale(1);
+}
+.z-radio.readonly, .z-radio.disabled {
+  pointer-events: none;
 }
 
 label {
