--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -1951,6 +1951,9 @@ select {
 .z-checkbox:active input[type=checkbox]:not(.readonly) + span:after {
   border-color: #1959AC;
 }
+.z-checkbox.readonly, .z-checkbox.disabled {
+  pointer-events: none;
+}
 
 .z-radio {
   position: relative;
@@ -2053,6 +2056,9 @@ select {
   -o-transform: translate(4px, 9px) scale(1);
   -ms-transform: translate(4px, 9px) scale(1);
   transform: translate(4px, 9px) scale(1);
+}
+.z-radio.readonly, .z-radio.disabled {
+  pointer-events: none;
 }
 
 /* _print.scss 
