--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -2509,6 +2509,9 @@ select {
 .z-checkbox:active input[type=checkbox]:not(.readonly) + span:after {
   border-color: #1959AC;
 }
+.z-checkbox.readonly, .z-checkbox.disabled {
+  pointer-events: none;
+}
 
 .z-radio {
   position: relative;
@@ -2611,6 +2614,9 @@ select {
   -o-transform: translate(4px, 9px) scale(1);
   -ms-transform: translate(4px, 9px) scale(1);
   transform: translate(4px, 9px) scale(1);
+}
+.z-radio.readonly, .z-radio.disabled {
+  pointer-events: none;
 }
 
 .z-input-button .z-button-clear {
