#10584 알림 문구 디자인 수정
- 이미지 경로 수정

--- a/src/main/resources/public/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/scss/theme/default/_variables.scss
@@ -1,6 +1,6 @@
 //////////////////////////// Asset path ////////////////////////////
-$font-folder-path:                            '../fonts';
-$icon-folder-path:                            '../media/icons/';
+$font-folder-path:                            '../../../fonts';
+$icon-folder-path:                            '../../../media/icons/';
 $image-folder-path:                           '../media/images/';
 
 // 테마별 경로
