--- a/src/main/resources/public/template/board/boardArticlesList.html
+++ b/src/main/resources/public/template/board/boardArticlesList.html
@@ -8,7 +8,7 @@
     <thead class="z-list-head">
         <tr class="flex-row align-items-center">
             <th style="width:10%;" class="align-left" th:text="#{board.label.number}"></th>
-            <th style="width:15%;" class="align-left" th:if="${#lists.size(boardList) > 0 && boardList[0].categoryYn}" th:text="#{board.label.category}"></th>
+            <th style="width:15%;" class="align-left" th:if="${categoryUseYn}" th:text="#{board.label.category}"></th>
             <th style="width:30%;" class="align-left" th:text="#{common.label.title}"></th>
             <th style="width:10%;" class="align-left" th:text="#{board.label.commentCount}"></th>
             <th style="width:10%;" class="align-left" th:text="#{board.label.readCount}"></th>
