--- a/src/main/resources/public/scss/theme/default/_notification.scss
+++ b/src/main/resources/public/scss/theme/default/_notification.scss
@@ -177,7 +177,7 @@
     .icon {
       width: $toastify-icon-size;
       height: $toastify-icon-size;
-      @include backgroundImage('#{$image-folder-path}notification/img_notification_logo.png', 6.25rem, null, null, null, null); // 100px
+      @include backgroundImage('#{$theme-image-folder-path}notification/img_notification_logo.png', 6.25rem, null, null, null, null); // 100px
     }
     .content {
       width: 23.13rem; // 370px
