--- a/src/main/resources/public/scss/document/_modal.scss
+++ b/src/main/resources/public/scss/document/_modal.scss
@@ -50,8 +50,8 @@
               font-family: $cmdb-ci-relation-select-group-font-family;
               padding: $cmdb-ci-relation-select-group-padding;
             }
-            .z-ci-select-box {
-              width: $cmdb-ci-ci-select-box-width;
+            .z-target-ci-select-box {
+              width: $cmdb-ci-target-select-box-width;
             }
             .z-relation-type-select-box {
               width: $cmdb-ci-relation-select-box-width;
