--- a/src/main/resources/public/scss/document/_variables.scss
+++ b/src/main/resources/public/scss/document/_variables.scss
@@ -75,8 +75,8 @@ $cmdb-ci-relation-select-group-font-weight:  $font-weight-medium;
 $cmdb-ci-relation-select-group-font-family:  $font-family-m;
 $cmdb-ci-relation-select-group-padding:      0.6875rem 0 0.6875rem 0; // 11px 0 11px 0
 
-$cmdb-ci-ci-select-box-width:                20.3rem; // 324.8px;
-$cmdb-ci-relation-select-box-width:          10.9rem; // 174.4px;
+$cmdb-ci-target-select-box-width:            30.5rem; // 488px
+$cmdb-ci-relation-select-box-width:          21.8125rem; // 349px
 
 ///////////////////////////// Tree ////////////////////////////////
 $tree-modal-width:                           40rem; // 640px
