#11128 SCSS - color 검토

--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -1313,7 +1313,7 @@ input, button, select, optgroup, textarea {
   height: 2.5rem;
   font-size: 1rem;
   font-weight: 700;
-  color: #333D47;
+  color: #63686C;
   background-color: #FFFFFF;
   padding: 0.625rem 0.75rem;
 }
@@ -1838,9 +1838,9 @@ label {
 }
 .switch input[type=checkbox]:hover + span::before {
   border-color: #64BBF6;
-  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
-  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
-  box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(51, 154, 240, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(51, 154, 240, 0.2);
+  box-shadow: 0 0 0.3125rem 0 rgba(51, 154, 240, 0.2);
 }
 .switch:focus input[type=checkbox] + span:before {
   border-color: #2578CE;
@@ -4112,7 +4112,7 @@ select {
   margin-top: 0.5rem;
 }
 .file-uploader-edit .dropzone .dz-default.dz-message .add-file-button-wrap .dz-clickable {
-  color: #0098FF;
+  color: #339AF0;
   cursor: pointer;
 }
 .file-uploader-edit .dropzone .dz-default.dz-drag-hover {
@@ -4369,7 +4369,7 @@ select {
   right: 0;
   bottom: 0;
   left: 0;
-  background: linear-gradient(to bottom, #0098FF, #0098FF);
+  background: linear-gradient(to bottom, #339AF0, #339AF0);
   -webkit-transition: width 300ms ease-in-out;
   -moz-transition: width 300ms ease-in-out;
   -o-transition: width 300ms ease-in-out;
@@ -5538,40 +5538,40 @@ body.modal-active {
     opacity: 1;
   }
 }
-.help-tooltip {
+.z-help-tooltip {
   display: inline-block;
   margin-left: 0.3125rem;
   vertical-align: middle;
 }
-.help-tooltip .z-icon.i-tooltip {
+.z-help-tooltip .z-icon.i-tooltip {
   cursor: pointer;
   background: #8B9094;
 }
-.help-tooltip .tooltip-contents {
+.z-help-tooltip .z-tooltip-contents {
   position: absolute;
   left: 0;
   visibility: hidden;
   background-color: #FFFFFF;
-  color: #0098FF;
-  width: 21.25rem;
-  font-size: 0.875rem;
-  border: 0.125rem solid #0098FF;
+  color: #339AF0;
+  width: 100%;
+  font-size: 1rem;
+  border: 0.125rem solid #339AF0;
   border-radius: 0.125rem;
   -webkit-border-radius: 0.125rem;
   -moz-border-radius: 0.125rem;
   padding: 1.0625rem 0.9375rem 0.9375rem 0.9375rem;
   margin: 0.25rem 0 0 0;
   z-index: 500;
-  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(30, 47, 63, 0.2);
-  -moz-box-shadow: 0 0 0.3125rem 0 rgba(30, 47, 63, 0.2);
-  box-shadow: 0 0 0.3125rem 0 rgba(30, 47, 63, 0.2);
+  -webkit-box-shadow: 0 0 0.125rem 0 #CFD5D9;
+  -moz-box-shadow: 0 0 0.125rem 0 #CFD5D9;
+  box-shadow: 0 0 0.125rem 0 #CFD5D9;
 }
-.help-tooltip .tooltip-contents span {
-  color: #0098FF;
+.z-help-tooltip .z-tooltip-contents span {
+  color: #339AF0;
   word-break: keep-all;
   line-height: 1.5;
 }
-.help-tooltip:hover .tooltip-contents {
+.z-help-tooltip:hover .tooltip-contents {
   visibility: visible;
   -webkit-animation-delay: 0s;
   -webkit-animation-duration: 0.3s;
@@ -5604,7 +5604,7 @@ body.modal-active {
   animation-iteration-count: 1;
   animation-direction: normal;
 }
-.help-tooltip:hover .z-icon.i-tooltip {
+.z-help-tooltip:hover .z-icon.i-tooltip {
   background: #339AF0;
 }
 
@@ -5699,9 +5699,9 @@ body.modal-active {
   font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
-  color: #0098FF;
+  color: #339AF0;
   background-color: #FFFFFF;
-  border: 0.125rem solid #0098FF;
+  border: 0.125rem solid #339AF0;
   border-radius: 0.0625rem;
   -webkit-border-radius: 0.0625rem;
   -moz-border-radius: 0.0625rem;
@@ -6070,7 +6070,7 @@ body.modal-active {
   background: #CFD5D9;
 }
 .z-tooltip-menu .z-tooltip-menu-items .z-tooltip-menu-item:hover .z-icon {
-  background: #0098FF;
+  background: #339AF0;
 }
 
 /* 세부 속성 디자인 */
@@ -6088,7 +6088,7 @@ body.modal-active {
 .property-group .property-group-label {
   width: 100%;
   font-size: 1rem;
-  color: #323233;
+  color: #222529;
 }
 
 .property {
@@ -6100,7 +6100,7 @@ body.modal-active {
 }
 .property .property-label {
   font-size: 0.875rem;
-  color: #8D9299;
+  color: #8B9094;
 }
 .property .property-label .property-label-text {
   display: inline-block;
