--- a/src/main/resources/public/scss/portal/_variables.scss
+++ b/src/main/resources/public/scss/portal/_variables.scss
@@ -50,7 +50,7 @@ $card-list-hover-bg-color:                   $neutral200;
 // 검색 결과 목록 
 $list-bottom-border-color:                   $gray300;
 // 검색 키워드 색상
-$keyword-font-color:                         $blue;
+$keyword-font-color:                         $blue500;
 // 검색 내용
 $list-row-content-font-color:                $gray600;
 
