--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -38,9 +38,9 @@
                                 <span th:text="#{user.label.id}"></span>
                                 <span class="required"></span>
                             </label>
-                            <div class="help-tooltip">
+                            <div class="z-help-tooltip">
                                 <span class="z-icon i-tooltip"></span>
-                                <div class="tooltip-contents">
+                                <div class="z-tooltip-contents">
                                     <span th:utext="#{user.tooltip.idRule}"></span>
                                 </div>
                             </div>
@@ -51,9 +51,9 @@
                                 <span th:text="#{user.label.password}"></span>
                                 <span class="required"></span>
                             </label>
-                            <div class="help-tooltip">
+                            <div class="z-help-tooltip">
                                 <span class="z-icon i-tooltip"></span>
-                                <div class="tooltip-contents">
+                                <div class="z-tooltip-contents">
                                     <span th:utext="#{user.tooltip.pwRule}"></span>
                                 </div>
                             </div>
