--- a/src/main/resources/public/template/user/userEditSelf.html
+++ b/src/main/resources/public/template/user/userEditSelf.html
@@ -30,9 +30,9 @@
                             <label for="userId">
                                 <span th:text="#{user.label.id}"></span>
                                 <span class="required"></span>
-                                <div class="help-tooltip">
+                                <div class="z-help-tooltip">
                                     <span class="z-icon i-tooltip"></span>
-                                    <div class="tooltip-contents">
+                                    <div class="z-tooltip-contents">
                                         <span th:utext="#{user.tooltip.idRule}"></span>
                                     </div>
                                 </div>
@@ -44,9 +44,9 @@
                             <label for="password">
                                 <span th:text="#{user.label.password}"></span>
                                 <span class="required"></span>
-                                <div class="help-tooltip">
+                                <div class="z-help-tooltip">
                                     <span class="z-icon i-tooltip"></span>
-                                    <div class="tooltip-contents">
+                                    <div class="z-tooltip-contents">
                                         <span th:utext="#{user.tooltip.pwRule}"></span>
                                     </div>
                                 </div>
