--- a/src/main/resources/public/scss/process/_variables.scss
+++ b/src/main/resources/public/scss/process/_variables.scss
@@ -24,7 +24,7 @@ $layout-element-palette-width:                     6.25rem; // 100px
 $layout-element-palette-bg-color:                  $white;
 $layout-element-palette-border-color:              $gray300;
 $layout-element-palette-border-width:              0.0625rem; // 1px
-$layout-element-palette-box-shadow-color:          $blue600;
+$layout-element-palette-box-shadow-color:          $gray300;
 
 // 엘리먼트 아이콘
 $element-icon-width:                               5.625rem; // 90px
@@ -53,105 +53,91 @@ $element-icon-toggle: (
 );
 
 // main > drawing-board
-$drawing-board-bg-color:                     map-get($grays, "light"); // 모눈종이 바탕색
-$drawing-board-line-width:                   1; // 모눈종이 라인 굵기
-$drawing-board-line-color:                   map-get($grays, "line"); // 모눈종이 선 색상
+$drawing-board-bg-color:                           $neutral50; // 모눈종이 바탕색
+$drawing-board-line-width:                         1; // 모눈종이 라인 굵기
+$drawing-board-line-color:                         $gray200; // 모눈종이 선 색상
 
 // 미니맵
-$minimap-width:                              350px; // 350px
-$minimap-height:                             260px; // 260px
-$minimap-bg-color:                           $white;
-$minimap-inside-bg-color:                    map-get($grays, "light"); // 미니맵 내부 배경 색상
-$minimap-border:                             0.0625rem solid map-get($grays, "line"); // 1px
-$minimap-box-shadow:                         0 0 0.3125rem 0 map-get($grays, "line"); // 0 0 5px 0
-$minimap-border-radius:                      0.0625rem; // 1px
-$minimap-guide-bg-color:                     #A3B6CC; // 미니맵 위치 변경시 표시되는 색상
-$minimap-guide-bg-color-opacity:             0.25; // 미니맵 위치 변경시 표시되는 색상 불투명도
+$minimap-width:                                    21.875rem; // 350px
+$minimap-height:                                   16.25rem; // 260px
+$minimap-bg-color:                                 $white;
+$minimap-inside-bg-color:                          $neutral50; // 미니맵 내부 배경 색상
+$minimap-border-color:                             $gray300;
+$minimap-border-width:                             0.0625rem;
+$minimap-box-shadow-color:                         $gray300;
+$minimap-border-radius:                            0.0625rem; // 1px
+$minimap-guide-bg-color:                           $neutral400; // 미니맵 위치 변경시 표시되는 색상
+$minimap-guide-bg-color-opacity:                   0.25; // 미니맵 위치 변경시 표시되는 색상 불투명도
 
 // 시뮬레이션 리포트
-$simulation-report-width:                    63.75rem; // 1020px
-$simulation-report-height:                   22.688rem; // 363px
-$simulation-report-bg-color:                 $white;
-$simulation-report-border:                   0.0625rem solid map-get($grays, "line"); // 1px
-$simulation-report-box-shadow:               0 0 0.3125rem 0 map-get($grays, "line"); // 0 0 5px 0
-$simulation-report-border-radius:            0.0625rem; // 1px
+$simulation-report-width:                          63.75rem; // 1020px
+$simulation-report-height:                         22.688rem; // 363px
+$simulation-report-bg-color:                       $white;
+$simulation-report-border-color:                   $gray300;
+$simulation-report-border-width:                   0.0625rem;
+$simulation-report-box-shadow-color:               $gray300;
+$simulation-report-border-radius:                  0.0625rem; // 1px
 // 모달의 제목과 성공/실패 결과 표시
-$simulation-report-title-font-size:          1.125rem; // 18px
-$simulation-report-title-font-weight:        $font-weight-medium;
-$simulation-report-title-font-color:         map-get($blacks, "light");
-$simulation-report-content-font-size:        1rem; // 16px
-$simulation-report-content-font-weight:      $font-weight-regular;
-$simulation-report-content-font-color:       map-get($grays, "dark");
+$simulation-report-title-font-size:                $font-size-m; // 18px
+$simulation-report-title-font-weight:              $font-weight-medium;
+$simulation-report-title-font-color:               $gray800;
+$simulation-report-content-font-size:              $font-size-s; // 16px
+$simulation-report-content-font-weight:            $font-weight-regular;
+$simulation-report-content-font-color:             $gray800;
 
 // process properties header
-$layout-properties-header-height:            2.5rem; // 40px
-$layout-properties-header-font-size:         $font-size-s;
-$layout-properties-header-font-color:        $white;
-$layout-properties-header-font-weight:       $font-weight-medium;
-$layout-properties-header-bg-color:          map-get($blues, "hover");
+$layout-properties-header-height:                  2.5rem; // 40px
+$layout-properties-header-font-size:               $font-size-s; // 16px
+$layout-properties-header-font-color:              $gray600;
+$layout-properties-header-font-weight:             $font-weight-bold;
+$layout-properties-header-bg-color:                $white;
 
 // process properties
-$layout-properties-width:                     18.75rem; // 300px
-$layout-properties-bg-color:                  $white;
-$layout-properties-border:                    0.0625rem solid map-get($grays, "line"); // 1px
-$layout-properties-box-shadow:                -0.0625rem 0.9375rem 0.4375rem 0 hexToRGBA(map-get($grays, 'pressed'), 0.15);// -1px 15px 7px 0px $pressed-gray, 불투명도 15%;
+$layout-properties-width:                          18.75rem; // 300px
+$layout-properties-bg-color:                       $white;
+$layout-properties-border-color:                   $gray300;
+$layout-properties-border-width:                   0.0625rem; // 1px
+$layout-properties-box-shadow-color:               $gray300;
 
 // 세부 속성명
-$properties-title-font-size:                  $font-size-s; // 16px
-$properties-title-font-weight:                $font-weight-medium;
-$properties-title-font-color:                 map-get($blacks, "light");
-
-// clipboard tooltip
-// ID 복사하는 용도 > _tooltip.scss에 정의되어 있음
-$clipboard-tooltip-font-size:                 $font-size-xs; // 14px
-$clipboard-tooltip-font-weight:               $font-weight-regular;
-$clipboard-tooltip-font-color:                $blue;
-$clipboard-tooltip-bg-color:                  $white;
-$clipboard-tooltip-border-color:              $blue;
-$clipboard-tooltip-border-width:              0.125rem; // 2px
-$clipboard-tooltip-border:                    $clipboard-tooltip-border-width solid $clipboard-tooltip-border-color;
-$clipboard-tooltip-border-radius:             0.0625rem; // 1px
+$property-group-label-color:                       $gray800;
+$property-group-label-font-size:                   $font-size-s; // 16px
+$property-label-color:                             $gray500;
+$property-label-font-size:                         $font-size-xs; // 14px
 
 //////////////////////////// element ////////////////////////////
-// table
-$table-border-color:                          map-get($grays, "line");
-
 // element
-$node-font-size:                              $font-size-s; // 16px
-$node-font-weight:                            $font-weight-medium;
-$node-font-color:                             map-get($blacks, "light");
-$node-width:                                  1; // 두께
-$node-selected-width:                         2;
-$node-selected-color:                         $blue;
+$node-font-size:                                   $font-size-s; // 16px
+$node-font-weight:                                 $font-weight-medium;
+$node-font-color:                                  $gray600;
+$node-width:                                       1; // 두께
+$node-selected-width:                              2;
+$node-selected-color:                              $blue500;
 
 // task
-$event-color:                                 #FF5EAF; // start , end
-$gateway-color:                               #FFC336;
-$userTask-color:                              #1CC7D0;
-$manualTask-color:                            #2ECE7E;
-$scriptTask-color:                            #93C431;
-$subprocess-color:                            #CF87FF;
-$reject-color:                                #ff0000;
-$annotation-color:                            #000000;
+$event-color:                                      $pink500; // start , end
+$gateway-color:                                    $orange400;
+$userTask-color:                                   $cyan500;
+$manualTask-color:                                 $indigo500;
+$scriptTask-color:                                 $green500;
+$subprocess-color:                                 $violet500;
+$reject-color:                                     $red500;
+$annotation-color:                                 $black;
+$group-color:                                      $black;
 
 // 선
-$connector-color:                             map-get($grays, "dark");
-$connector-width:                             1; // 두께
-$connector-selected-width:                    2;
-$connector-pointer-color:                     $blue; // 점
+$connector-color:                                  $gray600;
+$connector-width:                                  1; // 두께
+$connector-selected-width:                         2;
+$connector-pointer-color:                          $blue500; // 점
 
 // 가이드라인 (정렬 일치시 나타나는 선)
-$guides-line-color:                           darkgray;
+$guides-line-color:                                $gray400;
 
 // tooltip
-$tooltip-bg-color:                            $white;
-$tooltip-border-width:                        1;
-$tooltip-border-color:                        map-get($blues, "light");
-
-// readonly일 경우
-$element-readonly-font-color:                 $gray;
-$element-readonly-bg-color:                   map-get($grays, "light");
-$element-readonly-border-color:               map-get($grays, "line");
+$element-tooltip-bg-color:                         $white;
+$element-tooltip-border-width:                     1;
+$element-tooltip-border-color:                     $gray300;
 
 //////////////////////////// thumbnail //////////////////////////
 // thumbnail
