--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -150,7 +150,7 @@ label {
       + span {
         &::before {
           border-color: $element-hover-border-color;
-          @include boxShadow(0, 0, 0.3125rem, 0, hexToRGBA($blue, 0.2)); // 5px
+          @include boxShadow(0, 0, 0.3125rem, 0, hexToRGBA($blue500, 0.2)); // 5px
         }
       }
     }
