--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -102,9 +102,9 @@
             <label for="executeCycleType">
                 <span th:text="#{scheduler.label.executeCycleType}"></span>
                 <span class="required"></span>
-                <div class="help-tooltip">
+                <div class="z-help-tooltip">
                     <span class="z-icon i-tooltip"></span>
-                    <div id="tooltipContent" class="tooltip-contents">
+                    <div id="tooltipContent" class="z-tooltip-contents">
                         <span id="fixedDelayTooltip" th:utext="#{scheduler.tooltip.fixedDelay}"></span>
                         <span id="fixedRateTooltip" th:utext="#{scheduler.tooltip.fixedRate}"></span>
                         <span id="cronTooltip" th:utext="#{scheduler.tooltip.cron}"></span>
