#11128 SCSS - color 검토

--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -5571,7 +5571,7 @@ body.modal-active {
   word-break: keep-all;
   line-height: 1.5;
 }
-.z-help-tooltip:hover .tooltip-contents {
+.z-help-tooltip:hover .z-tooltip-contents {
   visibility: visible;
   -webkit-animation-delay: 0s;
   -webkit-animation-duration: 0.3s;
