--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -4701,7 +4701,7 @@ table tbody tr:hover {
   word-break: keep-all;
   line-height: 1.5;
 }
-.z-help-tooltip:hover .tooltip-contents {
+.z-help-tooltip:hover .z-tooltip-contents {
   visibility: visible;
   -webkit-animation-delay: 0s;
   -webkit-animation-duration: 0.3s;
